# cppTango

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .windows-gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  DEVELOPING.md  INSTALL.md  README.md  RELEASE_NOTES.md  RELEASING.md  TESTING.md  VERSIONING.md  appveyor.yml  tango.pc.cmake
configure/: CMakeLists.txt  FindJPEG.cmake  FindZeroMQ.cmake  Findcppzmq.cmake  Findcustomjpeg.cmake  FindomniORB4.cmake  Findpthread.cmake  Findtangoidl.cmake  TangoConfig-with-deps.cmake.in  TangoConfig.cmake.in  check_omniidl.cmake  clang-format.cmake  cmake_linux.cmake  cmake_pch_linux.cmake  cmake_win.cmake  cmake_win_defs.cmake  config.cmake  cpack_win.cmake  find_and_check_omniidl.cmake  functions.cmake  git.cmake  install.cmake  tangoConfig.cmake.in  test_cppzmq_features.cpp  test_omniidl.cpp  test_omniidl.idl  test_opentelemetry_absl_variant.cpp  test_opentelemetry_exporter_option_new_name.cpp  test_zmq_version.cpp
cppapi/common/: CMakeLists.txt  assert.cpp  net.cpp
log4tango/: CMakeLists.txt  README  THANKS
log4tango/config/: config.cmake
log4tango/include/tango/common/: CMakeLists.txt
log4tango/src/: Appender.cpp  AppenderAttachable.cpp  CMakeLists.txt  FileAppender.cpp  Filter.cpp  Layout.cpp  LayoutAppender.cpp  Level.cpp  LogStreambuf.cpp  Logger.cpp  LoggerStream.cpp  LoggingEvent.cpp  OstreamAppender.cpp  PatternLayout.cpp  RollingFileAppender.cpp  StringUtil.cpp  StringUtil.h  XmlLayout.cpp
log4tango/tests/: CMakeLists.txt  clock.cpp  clock.h  clock.hh  test_bench.cpp  test_log4tango.cpp
src/common/: CMakeLists.txt  assert.cpp  git_revision.cpp.in  net.cpp  observability.cpp  telemetry.cpp  thread_specific_storage.cpp  utils.cpp
src/common/telemetry/: configuration.cpp  telemetry.cpp
src/include/tango/: CMakeLists.txt  tango.h
src/include/tango/client/: ApiUtil.h  AttributeProxy.h  CMakeLists.txt  CallBack.h  Connection.h  Database.h  DbDatum.h  DbDevice.h  DeviceAttribute.h  DeviceData.h  DevicePipe.h  DeviceProxy.h  accessproxy.h  api_util_templ.h  apiexcept.h  cbthread.h  dbapi.h  devapi.h  devapi_attr_templ.h  devapi_pipe.tpp  devapi_pipe_templ.h  devapi_utils.tpp  devapi_utils_templ.h  devasyn.h  event.h  event.tpp  event_templ.h  eventconsumer.h  filedatabase.h  group.h  lockthread.h
src/include/tango/common/: CMakeLists.txt  git_revision.h  omnithread_wrapper.h  pointer_with_lock.h  tango_base_class.h  tango_const.h  tango_const.h.in  tango_type_traits.h  tango_version.h.in
src/include/tango/idl/: CMakeLists.txt  apply-patches.cmake
src/include/tango/internal/: base_classes.h  net.h  perf_mon.h  stl_corba_helpers.h  type_traits.h  utils.h
src/include/tango/server/: CMakeLists.txt  attrdesc.h  attribute.h  attribute.tpp  attribute_spec_templ.h  attrprop.h  (+79 more)
tests/: .clang-tidy  CMakeLists.txt  ConfEventBugClient.cpp  README  README_event  README_old_tests  acc_right.cpp  add_rem_attr.cpp  add_rem_dev.cpp  allowed_cmd.cpp  archive_event.cpp  asyn_attr.cpp  asyn_attr_cb.cpp  asyn_attr_multi.cpp  asyn_cb.cpp  asyn_cb2.cpp  asyn_cb_cmd.cpp  asyn_cmd.cpp  asyn_faf.cpp  asyn_thread.cpp  asyn_write_attr.cpp  asyn_write_attr_multi.cpp  asyn_write_cb.cpp  att_conf.cpp  att_conf_event.cpp  att_conf_event_buffer.cpp  att_type_event.cpp  attr_conf_test.cpp  attr_manip.cpp  attr_misc.cpp  attr_proxy.cpp  attr_types.cpp  auto_asyn_cmd.cpp  back_ch_event.cpp  back_per_event.cpp  catch2_alarm.cpp  catch2_alarm_event.cpp  catch2_attr_async_cb.cpp  catch2_attr_conf_event.cpp  catch2_attr_manip.cpp  (+140 more)
tests/DummyClass/: CMakeLists.txt  DummyClass.cpp  DummyClass.h  DummyClass.xmi  DummyClassClass.cpp  DummyClassClass.h  DummyClassStateMachine.cpp
tests/bdd/: CMakeLists.txt  check_for_server_logs.cmake  main_server.cpp  main_test.cpp  make_log_dir.cmake  test_attr_manip.cpp  test_bdd_server.cpp
tests/bdd/utils/: auto_device_class.h  bdd_server.cpp  bdd_server.h  entry_points.cpp  entry_points.h  utils.cpp  utils.h
tests/catch2/: CMakeLists.txt  check_for_server_logs.cmake  make_log_dir.cmake  tango_catch2_tests.cmake  test_attr_manip.cpp  test_auto_attr.cpp  test_auto_command.cpp  test_change_event_on_nan.cpp  test_context.cpp  test_matchers.cpp  test_stringmakers.cpp  test_test_server.cpp
tests/catch2/utils/: auto_device_class.cpp  auto_device_class.h  callback_mock.h  callback_mock_base.h  callback_mock_helpers.cpp  callback_mock_helpers.h  capture_cerr.h  entry_points.cpp  generators.h  matchers.h  options.h  stringmakers.cpp  stringmakers.h  test_server.cpp  test_server.h  type_traits.h  utils.cpp  utils.h
tests/cmake_config/: CMakeLists.txt  dummy.cpp
tests/cxxtest/: README.txt
tests/cxxtest/include/: config.h.cmake
tests/cxxtest/template/: tango_template.tpl
tests/device_server/: CMakeLists.txt
tests/device_server/TestCppTango1022/: CMakeLists.txt  ClassFactory.cpp  TestCppTango1022.cpp  TestCppTango1022.h  TestCppTango1022.xmi  TestCppTango1022Class.cpp  TestCppTango1022Class.h  TestCppTango1022DynAttrUtils.cpp  TestCppTango1022StateMachine.cpp  main.cpp
tests/device_server/forward/: CMakeLists.txt  ClassFactory.cpp  FwdTest.cpp  FwdTest.h  FwdTest.xmi  FwdTestClass.cpp  FwdTestClass.h  FwdTestStateMachine.cpp  main.cpp
tests/device_server/generic/: CMakeLists.txt  DevTest.cpp  DevTest.h  DevTestClass.cpp  DevTestClass.h  FileDb.cpp  IOAddAttribute.cpp  IOAddAttribute.h  IOArray1.cpp  IOArray1.h  IOArray2.cpp  IOArray2.h  IOMisc.cpp  IOMisc.h  IOSeqVec.cpp  IOSeqVec.h  IOSetAttr.cpp  IOSetAttr.h  IOStr1.cpp  IOStr1.h  IOStr2.cpp  IOStr2.h  IOStrArray.cpp  IOStrArray.h  IOStruct.cpp  IOStruct.h  SigThrow.cpp  SigThrow.h  TypeCmds.cpp  TypeCmds.h  classfactory.cpp  main.cpp  main_win.cpp
tests/environment/: kill_server.sh.cmake  run_with_fixture.sh.cmake  setup_database.sh.cmake  setup_devices.sh.cmake  start_server.sh.cmake  tango_admin.sh.cmake
tests/resources/: always_hook.out  class_dev_signal.out  class_signal.out  dserver_cmd.out  example_property_file.db  signal.out
tests/superproject/: CMakeLists.txt
(+308 files in other folders)
